--- a/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_main.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/main_button_ic_read"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:layout_marginHorizontal="@dimen/main_button_margin_horizontal"
+        android:layout_marginBottom="@dimen/main_button_ic_margin_bottom"
+        android:text="@string/main_button_ic_read"
+        app:layout_constraintBottom_toTopOf="@+id/main_button_table_make"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/main_button_table_make"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/main_button_margin_horizontal"
+        android:layout_marginBottom="@dimen/main_button_table_margin_bottom"
+        android:text="@string/main_button_table_make"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
