--- a/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_main.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/main_button_margin_horizontal"
         android:layout_marginBottom="@dimen/main_button_ic_margin_bottom"
+        android:padding="16dp"
+        android:background="@color/colorAccent"
         android:text="@string/main_button_ic_read"
         app:layout_constraintBottom_toTopOf="@+id/main_button_table_make"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,6 +25,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/main_button_margin_horizontal"
         android:layout_marginBottom="@dimen/main_button_table_margin_bottom"
+        android:padding="@dimen/main_button_padding"
+        android:background="@color/colorAccent"
         android:text="@string/main_button_table_make"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
