--- a/mobile_app/TransportationExpensesApp/app/src/main/res/values/dimens.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/values/dimens.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- メイン画面 -->
-    <dimen name="main_button_margin_horizontal">24dp</dimen>
-    <dimen name="main_button_ic_margin_bottom">16dp</dimen>
-    <dimen name="main_button_table_margin_bottom">24dp</dimen>
+    <dimen name="main_button_margin_horizontal">32dp</dimen>
+    <dimen name="main_button_ic_margin_bottom">24dp</dimen>
+    <dimen name="main_button_table_margin_bottom">32dp</dimen>
+    <dimen name="main_button_padding">16dp</dimen>
 </resources>
