白追加、ボタン文字を白に指定

--- a/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_main.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:padding="16dp"
         android:background="@color/colorAccent"
         android:text="@string/main_button_ic_read"
+        android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toTopOf="@+id/main_button_table_make"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -28,6 +29,7 @@
         android:padding="@dimen/main_button_padding"
         android:background="@color/colorAccent"
         android:text="@string/main_button_table_make"
+        android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
