--- a/mobile_app/TransportationExpensesApp/app/src/main/res/values/dimens.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="main_button_ic_margin_bottom">24dp</dimen>
     <dimen name="main_button_table_margin_bottom">32dp</dimen>
     <dimen name="main_button_padding">16dp</dimen>
+    <!-- ICカード読み取り画面 -->
+    <dimen name="ic_read_text_margin_horizontal">32dp</dimen>
+    <dimen name="ic_read_text_textsize">20sp</dimen>
 </resources>
