--- a/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_main.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/main_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppToolbarTheme"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/main_button_ic_read"
         android:layout_width="0dp"
