--- a/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_ic_history_list.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_ic_history_list.xml
@@ -25,6 +25,13 @@
         app:layout_constraintStart_toStartOf="@+id/ic_history_list_toolbar"
         app:layout_constraintTop_toBottomOf="@+id/ic_history_list_toolbar" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/black"
+        app:layout_constraintBottom_toTopOf="@+id/ic_history_list_recyclerview"
+        app:layout_constraintTop_toBottomOf="@+id/ic_history_list_header_text" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ic_history_list_recyclerview"
         android:layout_width="match_parent"
