--- a/mobile_app/TransportationExpensesApp/app/src/main/res/values/dimens.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/values/dimens.xml
@@ -8,4 +8,8 @@
     <!-- ICカード読み取り画面 -->
     <dimen name="ic_read_text_margin_horizontal">32dp</dimen>
     <dimen name="ic_read_text_textsize">20sp</dimen>
+    <!-- ICカード履歴一覧画面 -->
+    <dimen name="list_ic_history_constraint_padding_vertical">4dp</dimen>
+    <dimen name="list_ic_history_textsize">14sp</dimen>
+    <dimen name="list_ic_history_fare_textsize">24sp</dimen>
 </resources>
