--- a/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_ic_history_list.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_ic_history_list.xml
@@ -19,7 +19,7 @@
         android:id="@+id/ic_history_list_header_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
+        android:padding="@dimen/ic_history_list_header_text_padding"
         android:text="@string/ic_history_header_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/ic_history_list_toolbar"
