--- a/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_ic_history_list_check.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_ic_history_list_check.xml
@@ -19,8 +19,8 @@
         android:id="@+id/ic_history_list_check_header_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:text="以下の内容で保存します。\n※暗くなっている項目は勤務表に追加されません。"
+        android:padding="@dimen/ic_history_list_check_header_text_padding"
+        android:text="@string/ic_history_list_check_header_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/ic_history_list_check_toolbar"
         app:layout_constraintTop_toBottomOf="@+id/ic_history_list_check_toolbar"
@@ -48,7 +48,7 @@
         android:id="@+id/ic_history_list_check_save_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="保存を確定する"
+        android:text="@string/ic_history_list_check_save_button"
         android:textColor="@color/colorWhite"
         android:background="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
