--- a/mobile_app/TransportationExpensesApp/app/src/main/res/layout/list_ic_history_check.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/layout/list_ic_history_check.xml
@@ -2,8 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingVertical="4dp"
-    android:paddingHorizontal="12dp"
+    android:paddingVertical="@dimen/list_ic_history_check_constraint_padding_vertical"
+    android:paddingHorizontal="@dimen/list_ic_history_check_constraint_padding_horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="XXXX/XX/XX"
-        android:textSize="14sp"
+        android:textSize="@dimen/list_ic_history_check_textsize"
         app:layout_constraintEnd_toStartOf="@+id/list_ic_history_check_fare_start_line"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,7 +22,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="電車"
-        android:textSize="14sp"
+        android:textSize="@dimen/list_ic_history_check_textsize"
         app:layout_constraintEnd_toStartOf="@+id/list_ic_history_check_fare_start_line"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/list_ic_history_check_date" />
@@ -32,7 +32,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="(XXX線)YYY駅 ~ (XXX線)ZZZ駅"
-        android:textSize="14sp"
+        android:textSize="@dimen/list_ic_history_check_textsize"
         app:layout_constraintEnd_toStartOf="@+id/list_ic_history_check_fare_start_line"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/list_ic_history_check_transportation" />
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:text="¥100"
-        android:textSize="24sp"
+        android:textSize="@dimen/list_ic_history_check_fare_textsize"
         app:layout_constraintBottom_toBottomOf="@+id/list_ic_history_check_stations"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/list_ic_history_check_fare_start_line" />
