--- a/mobile_app/TransportationExpensesApp/app/src/main/res/values/dimens.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/values/dimens.xml
@@ -19,4 +19,9 @@
     <dimen name="list_ic_history_save_constraint_padding_horizontal">12dp</dimen>
     <dimen name="list_ic_history_save_textsize">14sp</dimen>
     <dimen name="list_ic_history_save_fare_textsize">24sp</dimen>
+    <!-- 履歴一覧画面 -->
+    <dimen name="list_ic_history_constraint_padding_horizontal">12dp</dimen>
+    <dimen name="list_ic_history_constraint_padding_vertical">4dp</dimen>
+    <dimen name="list_ic_history_textsize">14sp</dimen>
+    <dimen name="list_ic_history_fare_textsize">24sp</dimen>
 </resources>
