--- a/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_ic_history_table_make.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_ic_history_table_make.xml
@@ -6,4 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".IcHistoryTableMakeActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/ic_history_table_make_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppToolbarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/ic_history_table_make_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
