--- a/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_ic_history_table_make.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_ic_history_table_make.xml
@@ -19,6 +19,18 @@
         android:id="@+id/ic_history_table_make_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/ic_history_table_make_toolbar"
+        app:layout_constraintBottom_toTopOf="@id/ic_history_table_make_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/ic_history_table_make_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="勤務表を作成する"
+        android:textColor="@color/colorWhite"
+        android:background="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
