--- a/mobile_app/TransportationExpensesApp/app/src/main/res/values/styles.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/values/styles.xml
@@ -11,5 +11,6 @@
         <item name="android:background">@color/colorPrimary</item>
         <item name="android:textColorPrimary">@color/colorWhite</item>
         <item name="android:colorControlNormal">@color/colorWhite</item>
+        <item name="android:actionMenuTextColor">@color/colorWhite</item>
     </style>
 </resources>
