--- a/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_ic_history_list.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_ic_history_list.xml
@@ -15,13 +15,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/ic_history_list_recyclerview"
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/ic_history_list_view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ic_history_list_toolbar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ic_history_list_toolbar" />
+        app:layout_constraintEnd_toEndOf="parent" >
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/ic_history_list_tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </androidx.viewpager.widget.ViewPager>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
