--- a/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_ic_history_list.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_ic_history_list.xml
@@ -21,7 +21,8 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/ic_history_list_toolbar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" >
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/ic_history_list_tab_layout"
