--- a/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_ic_history_table_make.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_ic_history_table_make.xml
@@ -15,14 +15,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/ic_history_table_make_recyclerview"
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/ic_history_table_make_view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/ic_history_table_make_toolbar"
-        app:layout_constraintBottom_toTopOf="@id/ic_history_table_make_button"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toTopOf="@id/ic_history_table_make_button">
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/ic_history_list_tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </androidx.viewpager.widget.ViewPager>
 
     <Button
         android:id="@+id/ic_history_table_make_button"
