StationCode内部をただのStrに変更。 その代わりMainActivityのonCreate発火直後にStationCodeのStrへ StationCode.jsonを代入。

--- a/mobile_app/TransportationExpensesApp/app/src/main/res/layout/list_ic_read_history.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/layout/list_ic_read_history.xml
@@ -10,10 +10,11 @@
         android:id="@+id/list_ic_read_history_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:checked="false"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/list_ic_read_history_checkbox_end_line"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/list_ic_read_history_checkbox_end_line"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/list_ic_read_history_checkbox_end_line"
