--- a/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_ic_history_list.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/res/layout/activity_ic_history_list.xml
@@ -19,10 +19,12 @@
         android:id="@+id/ic_history_list_view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/ic_history_list_toolbar"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ic_history_list_toolbar"
+        app:layout_constraintVertical_bias="0.0">
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/ic_history_list_tab_layout"
